After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 652699 - Reference leak in soup_session_prepare_for_uri
Reference leak in soup_session_prepare_for_uri
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2011-06-16 08:16 UTC by Sergio Villar
Modified: 2011-06-16 15:08 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (867 bytes, patch)
2011-06-16 08:21 UTC, Sergio Villar
accepted-commit_now Details | Review

Description Sergio Villar 2011-06-16 08:16:00 UTC
We take a reference to SoupAddress that is never unref'ed. (Give credit to Xan Lopez for valgrinding epy).
Comment 1 Sergio Villar 2011-06-16 08:21:42 UTC
Created attachment 190018 [details] [review]
Patch
Comment 2 Sergio Villar 2011-06-16 15:08:05 UTC
Comitted dd02576f84ea4916ad1a5781297b51449cf38cad